[gd_scene load_steps=9 format=3 uid="uid://qdivftm21j2e"]

[ext_resource type="Script" uid="uid://cvxgrv35fljue" path="res://miscelleaneous/weapon_tank.gd" id="1_cppo4"]
[ext_resource type="Texture2D" uid="uid://dpmuyh7jtx1uj" path="res://assets/miscellaneous/items/items_miscellaneous_MMF(16x16).png" id="2_uqvar"]
[ext_resource type="AudioStream" uid="uid://bd7xek1se6ov7" path="res://assets/sounds/1up.wav" id="3_5b564"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_db0v2"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1dues"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l0fj"]
atlas = ExtResource("2_uqvar")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_706x2"]
atlas = ExtResource("2_uqvar")
region = Rect2(224, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_c5lsd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l0fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_706x2")
}],
"loop": true,
"name": &"w_tank",
"speed": 5.0
}]

[node name="weapon_tank" type="RigidBody2D"]
collision_layer = 0
script = ExtResource("1_cppo4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_db0v2")
debug_color = Color(0.913725, 0.294118, 0, 0.490196)

[node name="detect_player" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_player"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_1dues")

[node name="play_effect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5b564")
volume_db = -5.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_c5lsd")
animation = &"w_tank"
frame_progress = 0.514191

[connection signal="body_entered" from="detect_player" to="." method="_on_detect_player_body_entered"]
[connection signal="finished" from="play_effect" to="." method="_on_play_effect_finished"]
